2009-06-23  Jackson Harper  <jackson@ximian.com>

	* System.Windows.Controls/RowDefinitionTest.cs:
	* System.Windows.Controls/ColumnDefinitionTest.cs: We handle empty
	attribute strings properly now, remove MonoBug.

2009-06-23  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: Add a new Binding test
	  to ensure we correctly handle binding.Path = null;

2009-06-22  Brad Taylor  <brad@getcoded.net>

	* moon-unit.csproj: 
	* System.Windows.Automation.Peers/ToggleButtonAutomationPeerTest.cs: 
	Add test for Toggle Button's automation peer.

2009-06-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: This test passes now.

2009-06-20  Sebastien Pouliot  <sebastien@ximian.com>

	* security/ReflectionTest.cs: Show the behavior of trying to invoke
	private methods from a public type inside platform code.

2009-06-17  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: chars are properly
	  supported now. Remove MoonlightBug

2009-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows/AssemblyPartCollectionTest.cs: New. Tests to 
	check differences between Deployement and standalone cases.
	* System.Windows/AssemblyPartTest.cs: Change GetLibraryStream to 
	public so it can be reused.

2009-06-15  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Media/VisualTreeHelperTest.cs: Fix one corner
	  case, mark two others as corner cases and create a new test
	  from one of the corner cases which tests for the same thing
	  but less strictly.

2009-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows/FrameworkElementTest.cs: Add MoonlightBug
	to a Loaded_styledChildOfNonStyledParent_styledSiblingInsertedBefore.

2009-06-12  Jackson Harper  <jackson@ximian.com>

	* misc/Parsing/PrimitiveTest.cs: Fixed this issue magicidently.

2009-06-12  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows/DeploymentTest.cs: Test that the Deployment.